Fix code tags alignment on browsers that use different default baseline

--- a/resources/css/_prism.css
+++ b/resources/css/_prism.css
@@ -67,6 +67,7 @@ pre[class*="language-"] {
     padding: 0 .125rem;
     max-width: 100%;
     overflow-x: auto;
+    vertical-align: middle;
 }
 
 .token.comment,
